# ecoissue

./: README.md  pedidos.json  pedidos.txt
proyecto1/: crear-imagen.sh  ejecutar.sh
proyecto1/docker/: Dockerfile  docker-compose.yaml
proyecto1/ecoissue/: README.md  consignas.txt  logging_config.json  pedidos.txt  pyproject.toml
proyecto1/ecoissue/ecoissue/: data_pedidos.py  json_juan.py  main.py  pedidos.txt  sistema_juan.py  sistema_pedidos.py  webapp.py
proyecto1/ecoissue/ecoissue/lucas/: Pedidos1.py  pedidos.json  pedidos.txt  pedidos2.py  pedidos3.py  pedidos4.py  pedidos5.py  pedidos6.py  pedidos7.py  pedidos7a.py
proyecto1/ecoissue/ecoissue/lucas/practicas/: contraseñas.txt  ping_ssh.py  resetPass.py  temperatura.py
