[tool.poetry]
name = "ecoissue"
version = "0.1.0"
description = ""
authors = ["Pablo Daniel Rey <pablo.rey@epicio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
